Add JavaFX 11 dependencies and run task